# ddos

./: .gitignore  DDOS.py  DDOS_IP.py  README.md  config.yaml  ddos.py  ddos2.py  del_cache.sh  headres.py  main.py  pyproject.toml  server.py  start_test_serv.sh  test.py
ddos/: __main__.py  ddos.py  ip_ddos.py
ddos/src/: argument.py  cpu_manager.py  headres.py  http_flooder.py  ip_flooder.py  port_scanner.py  tcp_flooder.py
ddos/utils/: ulog.py
test_site/: test_targget.py
utils/: __init__.py  ucolor.py  urequets.py
