[project]
name = "dddos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.1",
    "colorama>=0.4.6",
    "numpy>=2.3.4",
    "psutil>=7.1.1",
    "requests",
    "rich>=14.2.0",
    "ua-generator>=2.0.17",
    "uvloop>=0.22.1",
]
