[project]
name = "dddos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodns>=4.0.0",
    "aiohttp>=3.13.1",
    "colorama>=0.4.6",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "numpy>=2.3.4",
    "playwright>=1.58.0",
    "psutil>=7.1.1",
    "requests",
    "rich>=14.2.0",
    "ua-generator>=2.0.17",
    "uvicorn>=0.44.0",
    "uvloop>=0.22.1",
]
